--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,7 +9,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
   <title>MetaCraft | AssetStore</title>
-
+  <!-- 구글 아이콘 폰트 사용을 위한 링크 태그 -->
+  <link href="https://fonts.google.com/icons?icon.set=Material+Icons&selected=Material+Icons+Outlined:add_circle_outline:&icon.query=plus&icon.size=24&icon.color=%231f1f1f&icon.platform=web" rel="stylesheet">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
@@ -42,7 +43,8 @@
       <script src="/js/main.js"></script>
 
   <th:block layout:fragment="script"></th:block>
-
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
