feat : download images from S3
S3 이미지에 접근해서 버튼 누르면 사용자가 다운받을 수 있게 함

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -18,15 +18,21 @@
     </form>
 
     <!-- 검색된 이미지 표시 -->
-    <div>
-      <p th:if="${imageUrls == null}">Enter an asset ID to search for images.</p>
-      <p th:if="${imageUrls != null and imageUrls.isEmpty()}">No images found for this asset ID.</p>
-      <div th:if="${imageUrls != null}">
+    <!-- 검색된 이미지 표시 -->
+  <div>
+    <p th:if="${imageUrls == null}">Enter an asset ID to search for images.</p>
+    <p th:if="${imageUrls != null and imageUrls.isEmpty()}">No images found for this asset ID.</p>
+    <div th:if="${imageUrls != null}" id="imageContainer" th:data-urls="${imageUrls}">
         <img th:each="url : ${imageUrls}" th:src="${url}" alt="Asset Image" style="width: 150px; margin: 10px;">
-        <p th:text="${imageUrls}"></p>
-      </div>
     </div>
   </div>
 
+  <!-- download image -->
+  <section>
+    <button class="btn btn-primary" onclick="downloadImg()">download image</button>
+  </section>
+  
+
 </section>
+<script src="/js/script.js" layout:fragment="script"></script>
 </html>
