feat : download images as ZIP file
ZIP 파일로 압축해서 이미지 한방에 다운받는 기능 추가
※추후 사용시 로직 그대로 가져다가 쓰면 된다.

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -28,7 +28,7 @@
 
   <!-- download image -->
   <section>
-    <button class="btn btn-primary" onclick="downloadImg()">download image</button>
+    <button class="btn btn-primary" onclick="downloadImagesAsZip()">download image</button>
   </section>
   
 
