feat: add thumbnail upload functionality to AWS
썸네일을 AWS에 올리는 기능을 만들었습니다.

--- a/src/main/resources/templates/model-create.html
+++ b/src/main/resources/templates/model-create.html
@@ -17,5 +17,7 @@
     <input type="text" id="bd" name="bd" style="display: none;">
     <input type="text" id="mtl" name="mtl" style="display: none;">
     <input type="file" id="imageInput" name="images" style="display: none;" multiple>
+    <input type="file" id="thumbnailInput" name="thumbnail" style="display: none;">
+    <input type="file" id="thumbnail" name="thumbnail" style="display: none;">
   </form>
 </div>
