--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -4,9 +4,9 @@
 
   <form th:action="@{/api/assets/upload}" method="POST" enctype="multipart/form-data">
     <input type="text" name="obj">obj
-    <input type="text" name="mlt">mtl
+    <input type="text" name="mtl">mtl
     <input type="text" name="bd">bd
-    <input type="file" name="files" multiple>images
+    <input type="file" name="images" multiple>images
     <input type="submit" value="send">
   </form>
 
