feat: add asset list page and display logic
todo : 로그인 되어있지 않은 유저는 못 들어오게 막기

--- a/src/main/resources/templates/asset-list.html
+++ b/src/main/resources/templates/asset-list.html
@@ -11,8 +11,8 @@
           </span>
         </a>
       </div>
-      <div class="col-12 col-md-6 col-lg-4">
-        
+      <div class="col-12 col-md-6 col-lg-4" class="asset-block" th:each="asset : ${assets}">
+        <img src="" alt="">
       </div>
     </div>
   </div>
