--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -31,6 +31,9 @@
 /*----------------------------------------*/
 /* 김효원이 바꾼거 */
 
+.no-caret::after {
+  display: none !important;
+}
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
@@ -161,6 +164,7 @@ body {
 	align-items: center;
 	text-align: center;
 	border-radius: 10px;
+	position: relative;
 }
 
 .asset-createButton{
@@ -185,6 +189,26 @@ body {
 .form-control-fileButton{
 	background-color: #fff;
 	
+}
+.font-smaller{
+	font-size: smaller;
+}
+.asset-dropdown{
+	position: absolute;
+	top: 3%;
+	left: 90%;
+}
+.asset-dropdown-button{
+	border-radius: 50%;
+	background-color: #ddd;
+	opacity: 0.9;
+	width: 30px;
+	height: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: none;
+	color: black;
 }
 /* 김효원이 바꾼거 */
 html,
