fix: Resolve image upload issue to aws due to duplicate id
form 태그 내에 input 태그의 아이디들이 겹쳐서 생긴 문제였음
id에 assetId를 추가로 붙여서 아이디가 겹치지 않게 만들어 해결

--- a/src/main/resources/templates/asset-list.html
+++ b/src/main/resources/templates/asset-list.html
@@ -35,11 +35,11 @@
             <input type="text" class="form-control" name="assetName" th:value="${asset.name}">
           </div>
           <div class="col-3 form-control text-center">
-            <label for="thumbnail" class="font-smaller d-flex justify-content-center align-items-center"
+            <label th:for="@{|thumbnail_${asset.id}|}" class="font-smaller d-flex justify-content-center align-items-center"
               style="height: 100%; cursor: pointer;">
               mod thumbnail
             </label>
-            <input type="file" class="form-control-file" name="thumbnail" style="display: none;" id="thumbnail">
+            <input type="file" class="form-control-file" name="thumbnail" style="display: none;" th:id="@{|thumbnail_${asset.id}|}">
           </div>
           <div class="col-3">
             <input type="submit" class="btn btn-primary" value="save">
