--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
               <span>FRUIT FRESH</span>
               <h2>Vegetable <br />100% Organic</h2>
               <p>Free Pickup and Delivery Available</p>
-              <a th:href="@{|/test/lab|}" class="primary-btn">SHOP NOW</a>
+              <a th:href="@{|/api/assets/create|}" class="primary-btn">CREATE NOW</a>
             </div>
           </div>
         </div>
