feat : add release asset page
에셋 release 페이지 만들었습니다.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -155,8 +155,8 @@ body {
 	display: none
 }
 .asset-block{
+	aspect-ratio: 4 / 3;
 	width: 100%;
-	aspect-ratio: 4 / 3; 
 	background-color: #ccc;
 	display: inline-block;
 	justify-content: center;
@@ -166,7 +166,11 @@ body {
 	border-radius: 10px;
 	position: relative;
 }
-
+.asset-thumbnail{
+	aspect-ratio: 4 / 3;
+	width: 100%;
+	border-radius: 10px;
+}
 .asset-createButton{
 	
 	width: 100px;
@@ -209,6 +213,10 @@ body {
 	align-items: center;
 	border: none;
 	color: black;
+}
+
+.w-100p{
+	width: 100%;
 }
 /* 김효원이 바꾼거 */
 html,
