--- a/src/main/resources/templates/inquire.html
+++ b/src/main/resources/templates/inquire.html
@@ -58,7 +58,7 @@
           <form th:action="@{/inquire/send}" method="post" id="contactForm" name="contactForm">
             <div class="row">
               <div class="col-md-12 form-group mb-3">
-                <label for="" class="col-form-label">Email</label>
+                <label for="email" class="col-form-label">Email</label>
                 <input type="email" class="form-control bottom-border" name="email" id="email" placeholder="Your email"
                   th:value="${user.email}">
               </div>
