--- a/src/main/resources/templates/model-create.html
+++ b/src/main/resources/templates/model-create.html
@@ -12,6 +12,7 @@
       <div id="unity-fullscreen-button"></div>
     </div>
   </div>
+  <input type="text" id="userAuthority" value="Create" style="display : none;">
   <form th:action="@{/api/assets/upload}" enctype="multipart/form-data" class="mt-5" method="post" id="assetForm">
     <input type="text" id="obj" name="obj" style="display: none;">
     <input type="text" id="bd" name="bd" style="display: none;">
