style : change index page to fit our concept
컨셉에 맞게 인덱스 페이지 변경 완료함
백엔드는 아직 하나도 없고, 프론트만 완성된 상태

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -461,45 +461,45 @@
         <div class="col-lg-4 col-md-4 col-sm-6">
           <div class="blog__item">
             <div class="blog__item__pic">
-              <img src="img/blog/blog-1.jpg" alt="">
+              <img src="img/news/news3.png" alt="">
             </div>
             <div class="blog__item__text">
               <ul>
-                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                <li><i class="fa fa-comment-o"></i> 5</li>
+                <li><i class="fa fa-calendar-o"></i> Apr 12,2025</li>
+                <li><i class="fa fa-comment-o"></i> 17</li>
               </ul>
-              <h5><a href="#">Cooking tips make cooking simple</a></h5>
-              <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+              <h5><a href="#">Asset Packaging System Updated</a></h5>
+              <p>Assets are now automatically bundled with .obj, .mtl, and texture files. Download everything you need in one click.</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6">
           <div class="blog__item">
             <div class="blog__item__pic">
-              <img src="img/blog/blog-2.jpg" alt="">
+              <img src="img/news/news2.png" alt="">
             </div>
             <div class="blog__item__text">
               <ul>
-                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                <li><i class="fa fa-calendar-o"></i> Mar 22,2025</li>
                 <li><i class="fa fa-comment-o"></i> 5</li>
               </ul>
-              <h5><a href="#">6 ways to prepare breakfast for 30</a></h5>
-              <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+              <h5><a href="#">Multi-Image Upload Feature Now Live</a></h5>
+              <p>You can now upload multiple images per asset. Add textures, and custom colors — all in one go. </p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6">
           <div class="blog__item">
             <div class="blog__item__pic">
-              <img src="img/blog/blog-3.jpg" alt="">
+              <img src="img/news/news1.png" alt="">
             </div>
             <div class="blog__item__text">
               <ul>
-                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                <li><i class="fa fa-comment-o"></i> 5</li>
+                <li><i class="fa fa-calendar-o"></i> Mar 15,2025</li>
+                <li><i class="fa fa-comment-o"></i> 13</li>
               </ul>
-              <h5><a href="#">Visit the clean farm in the US</a></h5>
-              <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+              <h5><a href="#">From Browser to Unity: MetaCraft Model Goes Live</a></h5>
+              <p>The first full Unity-ready model from MetaCraft has been completed.</p>
             </div>
           </div>
         </div>
