fix: prevent Unity WebGL from intercepting keyboard input in form fields
유니티에서 가져가던 키보드 입력을 인풋 태그에 포커스가 있을 때 키보드 입력을 유니티로 못가게 막았다.

--- a/src/main/resources/templates/asset-release.html
+++ b/src/main/resources/templates/asset-release.html
@@ -45,9 +45,20 @@
         <div th:replace="~{asset-specte :: Specte}"></div>
       </div>
 
+
     </div>
   </form>
 </div>
 <script layout:fragment="script" src="/js/unity.js"></script>
+<script layout:fragment="script1">
+  window.addEventListener('keydown', function (e) {
+    const active = document.activeElement;
+    if (active.tagName === 'INPUT' || active.tagName === 'TEXTAREA') {
+      // Unity로 키 이벤트 안 넘어가게 막음
+      e.stopImmediatePropagation();
+    }
+  }, true);
+</script>
+</script>
 
 </html>
