style : reduce the categories
카테고리 개수 줄임

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,10 +19,10 @@
               <li><a href="#">Weapons & Military</a></li>
               <li><a href="#">Sci-Fi</a></li>
               <li><a href="#">Fantasy</a></li>
-              <li><a href="#">Animations</a></li>
-              <li><a href="#">VFX</a></li>
               <li><a href="#">Furnitures</a></li>
-              <li><a href="#">Sale</a></li>
+              <li><a href="#">&nbsp;</a></li>
+              <li><a href="#">&nbsp;</a></li>
+              <li><a href="#">&nbsp;</a></li>
             </ul>
           </div>
         </div>
