--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -79,7 +79,11 @@ body {
 	width: 100%;
 	aspect-ratio: 16 / 7;
 }
-
+.spectate-ratio{
+	background: var(--darkblue);
+	width: 100%;
+	aspect-ratio: 16 / 12 !important;
+}
 .unity-mobile #unity-canvas {
 	width: 100%;
 	height: 100%
