--- a/src/main/resources/templates/asset-specte.html
+++ b/src/main/resources/templates/asset-specte.html
@@ -1,6 +1,6 @@
 <div th:fragment="Specte" class="mx-0">
   <div id="unity-container" class="unity-desktop">
-    <canvas id="unity-canvas" width="100%" tabindex="-1"></canvas>
+    <canvas id="unity-canvas" class="spectate-ratio" width="100%" height="100%" tabindex="-1"></canvas>
     <div id="unity-loading-bar">
       <div id="unity-logo"></div>
       <div id="unity-progress-bar-empty">
