style : add Characters category
캐릭터 카테고리 뷰 페이지 추가함

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -94,7 +94,7 @@
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
-                  <li><a th:href="@{/api/assets/create}">Korean</a></li>
+                  <li><a th:href="@{/product/list}">Korean</a></li>
                   <li><a th:href="@{/test/lab}">English</a></li>
                 </ul>
               </div>
@@ -122,7 +122,7 @@
           <nav class="header__menu">
             <ul>
               <li class="active"><a th:href="@{/}">Home</a></li>
-              <li><a href="./shop-grid.html">Shop</a></li>
+              <li><a th:href="@{/product/list}">Shop</a></li>
               <li><a href="#">Forum</a></li>
               <li><a href="./blog.html">Create Asset</a></li>
               <li><a href="./contact.html">Inquire</a></li>
