style : add Environments, Props, Vehicles, Architecture of Categories
Environments, Props, Vehicles, Architecture 리스트 추가함

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
               <li><a href="#">Weapons & Military</a></li>
               <li><a href="#">Sci-Fi</a></li>
               <li><a href="#">Fantasy</a></li>
-              <li><a href="#">Furnitures</a></li>
+              <li><a href="#">&nbsp;</a></li>
               <li><a href="#">&nbsp;</a></li>
               <li><a href="#">&nbsp;</a></li>
               <li><a href="#">&nbsp;</a></li>
