feat: implement add-to-cart logic
에셋을 장바구니에 넣는 기능을 만들었다

--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -45,7 +45,7 @@
             Believe in your luck. Send this letter to 7 people right away.
           </p>
           <a th:href="@{|/product/get/${product.id}|}" class="primary-btn">BUY</a>
-          <a href="" class="warning-btn">ADD TO CARD</a>
+          <a th:href="@{|/cart/add/${product.id}|}" class="warning-btn">ADD TO CARD</a>
           <!-- <a th:href="#" class="heart-icon"><span class="icon_heart_alt"></span></a> -->
           <ul>
             <li><b>Share on</b>
