feat: implement Buy All modal for selecting all items on the cart page
장바구니 안에 있는 모든 프로덕트를 살 수 있게 모달을 띄어주는 기능을 만들었다.
todo : 장바구니에 있는 모든 프로덕트 사는 기능 만들기

--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -30,7 +30,7 @@
               <!-- <span th:text="@{|(${product.comments.size()})|}"></span> -->
             </span>
           </div>
-          <div class="product__details__price">[[${product.price}]]</div>
+          <div class="product__details__price">[[${product.price}]] $</div>
           <p>
             This letter originated in England and has traveled around the world, bringing luck to those who
             continued its journey. The person who receives this letter must send the same message to 7 other
