--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -70,7 +70,7 @@
   </div>
 </section>
 <!-- Breadcrumb Section End -->
-
+<input type="text" th:value="${modalName}" class="modalName" hidden>
 <!-- Shoping Cart Section Begin -->
 <section class="shoping-cart spad">
   <div class="container">
@@ -89,9 +89,10 @@
               <tr th:each="product : ${assetList}" th:with="total=${total + product.price}">
                 <td class="shoping__cart__item">
                   <span th:if="${product.modelAsset.thumbnail != null}">
-                    <img th:src="${product.modelAsset.thumbnail.imageUrl}" alt="썸네일" class="cart-thumbnail"width="100px" height="100px">
+                    <img th:src="${product.modelAsset.thumbnail.imageUrl}" alt="썸네일" class="cart-thumbnail"
+                      width="100px" height="100px">
                   </span>
-                  <span th:if ="${product.modelAsset.thumbnail == null}">
+                  <span th:if="${product.modelAsset.thumbnail == null}">
                     <img src="/img/default.png" alt="썸네일" class="cart-thumbnail" width="100px" height="100px">
                   </span>
                   <h5>[[${product.subject}]]</h5>
@@ -116,14 +117,13 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="shoping__cart__btns">
-          <a href="#" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
-          <a href="#" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
-            Upadate Cart</a>
+          <!-- todo : 프로덕트 리스트로 가기 -->
+          <a href="#" class="primary-btn">CONTINUE SHOPPING</a>
         </div>
       </div>
       <div class="col-lg-6">
         <div class="shoping__continue">
-          <div class="shoping__discount">            
+          <div class="shoping__discount">
           </div>
         </div>
       </div>
@@ -134,11 +134,40 @@
             <li th:each="product : ${assetList}">[[${product.subject}]] <span>$[[${product.price}]]</span></li>
             <li>Total <span>$[[${total}]]</span></li>
           </ul>
-          <a href="#" class="primary-btn">PROCEED TO CHECKOUT</a>
+          <a href="#" class="primary-btn" onclick="showBuyPopup()">PROCEED TO CHECKOUT</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="buyAll-modal modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Cart list</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body row" th:each="product : ${assetList}">
+          <div class="col-10">[[${product.subject}]]</div>
+          <div class="col-2">[[${product.price}]]</div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Buy All</button>
         </div>
       </div>
     </div>
   </div>
 </section>
 <!-- Shoping Cart Section End -->
+<script th:fragment="script1">
+  function showBuyPopup() {
+    $('.buyAll-modal').modal('show');
+  }
+  function hideBuyPopup() {
+    $('.buyAll-modal').modal('hide');
+  }
+</script>
+
 </html>
