feat : implement buy products in cart
장바구니 안에 제품을 일괄적으로 사는 기능 만들었다.

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -150,14 +150,21 @@
         </div>
         <div class="modal-body row" th:each="product : ${assetList}">
           <div class="col-10">[[${product.subject}]]</div>
-          <div class="col-2">[[${product.price}]]</div>
+          <div class="col-2">[[${product.price}]]$</div>
+        </div>
+        <div class="row p-3">
+          <div class="col-10"></div>
+          <div class="col-2">$[[${total}]]
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Buy All</button>
+          <a th:href="@{|/cart/buyAll|}" class="btn btn-primary">Buy All</a>
         </div>
+
       </div>
     </div>
+  </div>
   </div>
 </section>
 <!-- Shoping Cart Section End -->
