--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -46,6 +46,8 @@
   <script src="/js/mixitup.min.js"></script>
   <script src="/js/owl.carousel.min.js"></script>
   <script src="/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
 
   <th:block layout:fragment="script"></th:block>
   <th:block layout:fragment="script1"></th:block>
